--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -17,6 +17,10 @@ $pink: #e91e63 !default;
 $red: #f44336 !default;
 $orange: #ff5722 !default;
 $yellow: #ffab00 !default;
-$green: #8bc34a !default;
 $teal: #009688 !default;
 $cyan: #00bcd4 !default;
+
+$brown: #ba927b;
+$dark-brown: #6c5548;
+$green: #b2d233;
+$dark-green: #59691a;
