--- a/src/scss/gatstrap.scss
+++ b/src/scss/gatstrap.scss
@@ -50,6 +50,7 @@ $body-bg: $brown !default;
 $body-color: $gray-700 !default;
 $inverse-bg: $gray-900 !default;
 $inverse-color: $gray-600 !default;
+$thumbnail-bg: $white;
 
 // Links
 //
